<resources>
    <string name="app_name" translatable="false">Aero DAP TEST</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_venta">Let\'s travel together!</string>
    <string name="botonComprar">Buy Tickets</string>
    <string name="botonCheckin">Check In</string>
    <string name="monedaPago">" Select Payment Currency"</string>
    <string name="clpTexto">" CLP - Chilean Pesos   (This option is only valid for Cards issued in Chile.)"</string>
    <string name="usdTexto">USD - Dollars</string>
    <string name="destinos">Our Destinations</string>
    <string name="oficinas">Commercial Offices</string>
    <string name="bienvenido">Welcome!</string>
    <string name="cancelar">Cancel</string>
    <string name="title_activity_checkin" translatable="false">Checkin</string>
    <string name="tituloCheckin">We are going to fly!</string>
    <string name="title_activity_oficinas" translatable="false">Oficinas</string>
    <string name="cabezeraOficina">If you need personalized attention, you have any questions or problems, you can visit us at our commercial offices.</string>
    <string name="direccionBBA">Arturo Prat Nº 286, office 9, 2nd floor.</string>
    <string name="direccionPUQ">Ignacio Carrera Pinto 1015.</string>
    <string name="horarioBBA1">Monday to Friday from 09:00 to 13:00 and 14:30 to 18:30 rrs.</string>
    <string name="horarioBBA2">Saturdays from 09:00 to 13:00 hrs.</string>
    <string name="horarioPUQ1">Monday to Friday from 8:30 to 18:15 hrs.</string>
    <string name="horarioPUQ2">Saturdays from 9:00 to 13:00 and 15:00 to 18:00 hrs.</string>
    <string name="telefonoBBA">+56672212898</string>
    <string name="telefonoPUQ">+56612229936</string>
    <string name="telefonoTextoBBA">+56 67 2 212898</string>
    <string name="telefonoTextoPUQ">+56 61 2 229936</string>
    <string name="textoMapa">See map</string>
    <string name="tituloOficina">Come visit us!</string>
    <string name="oficinasSubtitulo">Our Offices</string>
    <string name="horario">Office hours:</string>
    <string name="direccion">Address:</string>
    <string name="telefono">Phone:</string>
    <string name="llamar">To Call</string>
    <string name="direccionWPR">Manuel Señoret S/N.</string>
    <string name="direccionWPU">Plaza del Ancla S/N.</string>
    <string name="horarioWPR1">Monday to Friday from 9:00 to 12:30 and 14:30 to 18:30 hrs.</string>
    <string name="horarioWPR2">Saturdays from 09:00 to 13:00 hrs.</string>
    <string name="horarioWPU1">Monday to Friday from 09:30 to 13:00 and 14:30 to 18:30 hrs.</string>
    <string name="horarioWPU2">Saturdays from 09:00 to 13:00 hrs.</string>
    <string name="telefonoWPR">+56612580089</string>
    <string name="telefonoTextoWPR">+56 61 2 580089</string>
    <string name="telefonoWPU">+56612621114</string>
    <string name="telefonoTextoWPU">+56 61 2 621114</string>
    <string name="title_activity_destinos" translatable="false">destinos</string>
    <string name="tituloDestinos">Discover Patagonia!</string>
    <string name="destinosSubtitulo">Our Destinations</string>
    <string name="destinosPUQ">Punta Arenas is the capital of the Magallanes region and the Chilean Antarctic. Founded on December 18, 1848, it is located on the coast of the peninsula of Brunswick, on the continental shore of the Strait of Magellan, and is the southernmost point of the continental mass of America. It is known as the \"Capital of Southern Patagonia\" and be the global gateway to the Antarctic continent.</string>
    <string name="destinosPUQ1">All our regular destinations have as their starting point the city of Punta Arenas.</string>
    <string name="destinosWPU">Puerto Williams is located on the northern shore of Navarino Island, and on the southern shore of the Beagle Channel. It is the capital of both the Communes of Cape Horn and Antarctica and the Province of Chilean Antarctic, and is characterized by being the southernmost administrative settlement on Earth.</string>
    <string name="destinosWPU1">From Monday to Saturday</string>
    <string name="destinosWPU2">Punta Arenas - Puerto Williams: 10:00 hrs.</string>
    <string name="destinosWPU3">Puerto Williams - Punta Arenas: 11:30 hrs.</string>
    <string name="destinosWPR">Porvenir is the capital of the province of Tierra del Fuego, and is the most inhabited city in the Chilean portion of the Isla Grande of Tierra del Fuego. Located next to the Porvenir Bay, it faces the city of Punta Arenas, from which it is separated by the Strait of Magellan. It was founded in the year 1894.</string>
    <string name="destinosWPR1">Monday to Friday</string>
    <string name="destinosWPR2">Punta Arenas - Porvenir : 08:15 / 12:30 / 16:30</string>
    <string name="destinosWPR3">Porvenir - Punta Arenas : 08:35 / 12:50 / 16:50</string>
    <string name="destinosWPR4">Saturday</string>
    <string name="destinosWPR5">Punta Arenas - Porvenir: 08:15 / 12:30</string>
    <string name="destinosWPR6">Porvenir - Punta Arenas: 08:35 / 12:50</string>
    <string name="destinosBBA">Balmaceda is a town near Coyhaique, in the Region of Aysén, being the only one in the area that has an international airport. For its part Coyhaique is the capital and the main urban center of the Region of Aysén. The city was founded on October 12, 1929.</string>
    <string name="destinosBBA1">Tuesday</string>
    <string name="destinosBBA2">Punta Arenas - Balmaceda: 13:30</string>
    <string name="destinosBBA3">Balmaceda - Punta Arenas: 15:30</string>
    <string name="destinosUSH">Ushuaia is a city in Argentina and the capital of the province of Tierra del Fuego, Antarctica and the South Atlantic Islands. It was founded on October 12, 1884. The city is located on the shores of the Isla Grande of Tierra del Fuego that overlook Ushuaia Bay in the Beagle Channel, and is surrounded by the Martial mountain range. Ushuaia is generally considered the southernmost city in the world.</string>
    <string name="destinosUSH1">From November 2, 2018 to March 10, 2019.</string>
    <string name="destinosUSH2">Friday and Sunday</string>
    <string name="destinosUSH3">Punta Arenas - Ushuaia: 14:00</string>
    <string name="destinosUSH4">Ushuaia - Punta Arenas: 15:30</string>
    <string name="destinosDPB">Located in the extreme south of Chile, 450 kilometers south of Punta Arenas and belonging to the commune of Timaukel in Tierra del Fuego. It is an emerging locality and in search of developing a new colony.</string>
    <string name="destinosDPB1">From October 5, 2018 to April 28, 2019.</string>
    <string name="destinosDPB2">Friday and Sunday</string>
    <string name="destinosDPB3">Punta Arenas - Pampa Guanaco: 18:00 hrs</string>
    <string name="destinosDPB4">Pampa Guanaco - Punta Arenas: 19:00 hrs</string>
    <string name="destinosDPB5">* Sale of tickets only in commercial offices.*</string>
    <string name="cabeceraDestinos">More than three decades flying in the southern skies ...</string>
    <string name="cabeceraDestinos1">Regular Flights Patagonia</string>
    <string name="contacto">Contact</string>
    <string name="preguntas">Frequent Questions</string>
    <string name="main">Welcome!</string>
    <string name="preguntasTituloCabecera">At Aerovias DAP we like you to travel informed. Everything you need, find it here!</string>
    <string name="preguntasEquipaje">Luggage Policy</string>
    <string name="preguntasInformacion">Information for your Trip</string>
    <string name="preguntasTarifas">Rate Policy</string>
    <string name="preguntasTerminos">Terms and Conditions</string>
    <string name="menuBoarding">My Boarding Pass</string>
    <string name="menuTickets">My Tickets</string>
    <string name="misArchivos">My files</string>
    <string name="condicionesTitulo">Terms and Conditions</string>
    <string name="condicionesTexto1">The present passenger ticket attest to the celebration and the conditions of the air transport contract celebrating between Aerovías DAP and the passenger whose name appears on this ticket. The aeronautical code of the Republic of Chile, law 18.916. Shall govern in addition to the contract of carriage. It will prevail in all that can not be renounced between the parties.</string>
    <string name="condicionesTexto2">The conditions of return, change or reissue of the air ticket are expressed below for each type of available fare, which are known and accepted by the passenger at the time of acquiring the ticket. In virtue of the foregoing, the provider Aerovías DAP, expressly states that there is no right to retract pursuant to the provisions of Article 3 bis of Law 19,496.</string>
    <string name="condicionesTexto3">Al passengers must be present at the airport counter 2 hrs before the scheduled flight, as indicated on their ticket. The flight closes 40 minutes before the hour, so as to carry on with all aspects before embark. Any passenger present after the time limit will not be embarked.</string>
    <string name="condicionesTituloEquipaje">Issues with luggage</string>
    <string name="condicionesTextoEquipaje1">In case of destruction or loss of luggage that takes place during air transport, compensation will be limited up to 0,15 UF per kg. with a weight limit corresponding to the maximum allowed luggage weight of the respective flight route.</string>
    <string name="condicionesTextoEquipaje2">The passenger must inform of the situation before abandoning the luggage retrieval area, by filing a formal complaint indicating his or her ID document, boarding pass and luggage ticket. In case the passenger has left the airport, the complaint must be filed back at the DAP counter in the airport.</string>
    <string name="condicionesTextoEquipaje3">Aerovías DAP will NOT be responsible for damage that results from normal use, such as:</string>
    <string name="condicionesTextoEquipaje4">•\tMinor cuts, scratches, unstitches, stains or broken zippers. •\tDamage to wheels, base, extensible handles, external pockets. •\tDamage resulting from excess weight. •\tLoss of pieces that project from the luggage, such as handles, pockets, locks, or straps. •\tBasically, damage that does not compromise the function of the luggage: contain personal items. •\tDamage sustained prior to the flight service with Aerovías DAP.</string>
    <string name="condicionesTituloRespon">Limits of Liability</string>
    <string name="condicionesTextoRespon1">In cases of destruction or loss of baggage that occurs during its air transportation, paid compensations will be limited to the amount of 0.15 UF per kilo with a maximum of 10 kilos. For this to be effective, it is a requirement that the passenger give written notice at DAP’s service counter in the airport immediately upon arrival at destination.</string>
    <string name="condicionesTextoRespon2">Only for reasons attributable to the company, when a flight is suspended, passengers will be relocated on subsequent flights or 100% of the value of the ticket will be reimbursed. In all, the company is not responsible for other expenses that could take place for the passenger.</string>
    <string name="condicionesTextoRespon3">Aerovias DAP can refuse or condition the transportation of those passengers whose condition or state constitutes a safety hazard or requires special care during the flight.</string>
    <string name="condicionesTextoCabecera">At Aerovias DAP we like to be transparent and to be aware of the conditions of our service.</string>
</resources>